# waitlist-pro

./: .replit  README.md  __init__.py  app.py  extensions.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
static/css/: styles.css
static/js/: script.js
templates/: admin_dashboard.html  admin_login.html  dashboard.html  index.html
templates/email/: confirm_email.html
