[tool.poetry]
name = "repl-nix-waitlistpro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
flask-sqlalchemy = "3.0.3"
psycopg2-binary = "2.9.6"
email-validator = "^2.2.0"
flask-mail = "0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
